  - `FT_Set_Var_Design_Coordinates`  and `FT_Set_MM_Blend_Coordinates`
    now set the `FT_FACE_FLAG_VARIATION`  bit in the `face_flag` field
    of `FT_Face` (i.e., the  macro `FT_IS_VARIATION` will return true)
    also  if any  of the  provided coordinates  is different  from the
    face's default value for the  corresponding axis, that is, the set
    up face is not at its default position.

  - The TrueType instruction interpreter  was optimized to produce 15%
    gain in the glyph loading speed.

  - Handling of Variation Fonts is now considerably faster,  thanks to
    contributions by Behdad Esfahbod.

  - TrueType and CFF glyph loading speed has been improved by 5-10% on
    modern 64-bit platforms  as  a result of better handling of fixed-
    point multiplication.

  - The BDF driver now loads fonts 75% faster.


======================================================================

CHANGES BETWEEN 2.13.2 and 2.13.3 (2024-Aug-11)

  I. IMPORTANT CHANGES

  - Some  fields  in  the  `FT_Outline` structure  have been   changed
    from signed  to unsigned type,  which  better reflects  the actual
    usage.   It  is  also  an  additional  means  to  protect  against
    malformed input.


  II. IMPORTANT BUG FIXES

  - Rare double-free crashes in the cache subsystem have been fixed.

  - Excessive stack allocation in the autohinter has been fixed.


  III. MISCELLANEOUS

  - The B/W  rasterizer has  received a major  upkeep that  results in
    large performance improvements.  The rendering speed has increased
    and even doubled for very complex glyphs.

  - If the new configuration option `TT_CONFIG_OPTION_GPOS_KERNING` is
    defined,  `FT_Get_Kerning`  understands rudimentary  GPOS  kerning
    (for TrueType fonts  only).  This is not enabled  by default since
    its usage  is very  limited, mainly  for legacy  applications that
    have to support TrueType fonts automatically converted from 'kern'